# vet-microservices

./: .env.example  .gitignore  Dockerfile.mlflow  README.md  dashboard.json  docker-compose.override.example.yml  docker-compose.userns.yml  docker-compose.yml  pom.xml  test_confidence_rating.html  watch_20260126-150058  watch_20260126-174003
.github/workflows/: ci.yml  docker-publish.yml
docker/: Dockerfile
docker/grafana/: Dockerfile
docker/grafana/dashboards/: grafana-petclinic-dashboard.json  vet-ai-monitoring-dashboard.json
docker/prometheus/: Dockerfile  alerts.yml  prometheus.yml
mlair/: INTEGRATION.md  build-local-images.sh  executor_main_override.py  mlair-runtime-config.js  nginx-browser-gateway-entrypoint.sh  nginx-mlair-browser.conf  nginx-mlair-browser.conf.template  seed-standard-pipelines.sh
mlair/custom_plugins/vetai_mlair_plugins/: pyproject.toml
mlair/custom_plugins/vetai_mlair_plugins/vetai_mlair_plugins/: __init__.py  plugins.py
mlair/custom_plugins/vetai_mlair_plugins/vetai_mlair_plugins.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mlair/custom_runner/: mlair_ext_runner.py
mlair/monitoring/: prometheus.yml
mlair/monitoring/alerts/: mlair-alerts.yml
mlair/sql/: fix_dataset_versions_materialized_default.sql
scripts/: test_training_integration.sh
spring-petclinic-api-gateway/: Dockerfile  pom.xml
spring-petclinic-customers-service/: pom.xml
spring-petclinic-genai-service/: Dockerfile  pom.xml
spring-petclinic-vets-service/: pom.xml
spring-petclinic-visits-service/: README_MEDICAL_FIELDS.md  pom.xml
(+147 files in other folders)
